--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ S3method(printnum,integer)
 S3method(printnum,list)
 S3method(printnum,matrix)
 S3method(printnum,numeric)
-S3method(printnum,papaja_labelled)
+S3method(printnum,sportrxiv_labelled)
 export(cite_r)
 export(create_bib)
 export(in_paren)
@@ -15,6 +15,5 @@ export(printp)
 export(r_refs)
 export(remove_comments)
 export(render_appendix)
-export(sort_terms)
 export(sportrxiv_word)
 importFrom(methods,is)
