--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,10 +15,11 @@ Imports:
   rmarkdown (>= 2.0),
   rmdfiltr (>= 0.1.2),
   yaml,
-  zip
+  zip,
+  downloader
 Suggests:
   testthat
-License: What license is it under?
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
